--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,4 @@
+
 name: Deploy to Droplet
 
 on:
@@ -7,6 +8,7 @@ on:
 
 env:
   REMOTE_PATH: ${{ secrets.DROPLET_PATH }}
+  KNOWN_HOSTS: ${{ secrets.KNOWN_HOSTS }}
 
 jobs:
   deploy:
@@ -21,14 +23,18 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Add known_hosts (optional if you pin host keys another way)
-        if: ${{ secrets.KNOWN_HOSTS != '' }}
+      - name: Add known_hosts (with safe fallback)
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.KNOWN_HOSTS }}" >> ~/.ssh/known_hosts
+          if [ -n "${KNOWN_HOSTS}" ]; then
+            echo "${KNOWN_HOSTS}" >> ~/.ssh/known_hosts
+          else
+            # First-use fallback: trust-on-first-use of droplet host key
+            ssh-keyscan -H ${{ secrets.DROPLET_HOST }} >> ~/.ssh/known_hosts
+          fi
           chmod 644 ~/.ssh/known_hosts
 
-      - name: Create remote folder
+      - name: Ensure remote folder exists
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.DROPLET_HOST }}
@@ -36,7 +42,7 @@ jobs:
           script: |
             mkdir -p "${{ env.REMOTE_PATH }}"
 
-      - name: Sync repository to droplet (excluding dev files)
+      - name: Sync repository to droplet (exclude dev/CI files and secrets)
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.DROPLET_HOST }}
@@ -45,8 +51,6 @@ jobs:
           target: "${{ env.REMOTE_PATH }}"
           overwrite: true
           rm: true
-          # Keep prod clean; do not upload your local virtualenv or git metadata.
-          # Add more patterns if needed.
           exclude: |
             .git*
             .github/
@@ -54,6 +58,7 @@ jobs:
             node_modules/
             __pycache__/
             *.log
+            .env.prod
 
       - name: Deploy containers
         uses: appleboy/ssh-action@v1.0.3
@@ -61,10 +66,18 @@ jobs:
           host: ${{ secrets.DROPLET_HOST }}
           username: ${{ secrets.DROPLET_USER }}
           script: |
+            set -e
             cd "${{ env.REMOTE_PATH }}"
-            # Safety: ensure docker exists and is usable
+
+            # Sanity checks
             docker --version
-            # Up with build using your prod compose
+            if ! docker compose version >/dev/null 2>&1; then
+              echo "Docker Compose plugin not found. Please install docker compose plugin on the droplet."
+              exit 1
+            fi
+
+            # Deploy (build + recreate as needed)
             docker compose -f docker-compose.prod.yml up -d --build
-            # Optional: prune old images (safe-ish if you only run this host for this app)
+
+            # Optional cleanup of dangling images
             docker image prune -f
