--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   REMOTE_PATH: ${{ secrets.DROPLET_PATH }}
-  DROPLET_FINGERPRINT: ${{ secrets.DROPLET_FINGERPRINT }} # optional: pin host key
+  DROPLET_FINGERPRINT: ${{ secrets.DROPLET_FINGERPRINT }} # optional
 
 jobs:
   deploy:
@@ -17,7 +17,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Explicit, static checks (avoid dynamic indexing into secrets)
       - name: Validate required secrets
         run: |
           if [ -z "${{ secrets.DROPLET_HOST }}" ]; then echo "Missing secret: DROPLET_HOST"; exit 1; fi
@@ -32,7 +31,7 @@ jobs:
           host: ${{ secrets.DROPLET_HOST }}
           username: ${{ secrets.DROPLET_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          fingerprint: ${{ env.DROPLET_FINGERPRINT }} # leave blank if you didn't set it
+          fingerprint: ${{ env.DROPLET_FINGERPRINT }}
           script_stop: true
           debug: true
           script: |
@@ -41,7 +40,7 @@ jobs:
             echo "✅ Created/exists: ${{ env.REMOTE_PATH }}"
             whoami && hostname && uname -a
 
-      - name: Sync repository to droplet (exclude CI/dev files & secrets)
+      - name: Sync repository to droplet (no excludes; action version doesn't support it)
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.DROPLET_HOST }}
@@ -53,14 +52,6 @@ jobs:
           overwrite: true
           rm: true
           debug: true
-          exclude: |
-            .git*
-            .github/
-            .venv/
-            node_modules/
-            __pycache__/
-            *.log
-            .env.prod
 
       - name: Deploy containers
         uses: appleboy/ssh-action@v1.0.3
@@ -71,6 +62,7 @@ jobs:
           fingerprint: ${{ env.DROPLET_FINGERPRINT }}
           script_stop: true
           debug: true
+        # If you are using Cloudflare Tunnel, ensure .env.prod exists on the droplet with CLOUDFLARE_TUNNEL_TOKEN
           script: |
             set -e
             cd "${{ env.REMOTE_PATH }}"
