--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,17 +2,18 @@ services:
   web:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile     # <-- use the new prod Dockerfile
     command: uvicorn app:app --host 0.0.0.0 --port 8001 --proxy-headers
-    expose:
-      - "8001"
+    expose: ["8001"]
     restart: unless-stopped
-    security_opt:
-      - no-new-privileges:true
+    security_opt: ["no-new-privileges:true"]
     read_only: true
-    tmpfs: [/tmp]
+    tmpfs: ["/tmp"]
 
   cloudflared:
     image: cloudflare/cloudflared:latest
     restart: unless-stopped
-    command: tunnel --no-autoupdate run --token ${CLOUDFLARE_TUNNEL_TOKEN}
+    env_file:
+      - .env.prod                # lives only on the droplet
+    entrypoint: ["/bin/sh","-lc"]
+    command: cloudflared tunnel --no-autoupdate run --token "$CLOUDFLARE_TUNNEL_TOKEN"
