--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -14,6 +14,6 @@ services:
     image: cloudflare/cloudflared:latest
     restart: unless-stopped
     env_file:
-      - .env.prod                # lives only on the droplet
+      - srv/website/.env.prod                # lives only on the droplet
     entrypoint: ["/bin/sh","-lc"]
     command: cloudflared tunnel --no-autoupdate run --token "$CLOUDFLARE_TUNNEL_TOKEN"
