--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -15,5 +15,4 @@ services:
     restart: unless-stopped
     env_file:
       - /srv/website/.env.prod                # lives only on the droplet
-    entrypoint: ["/bin/sh","-lc"]
-    command: cloudflared tunnel --no-autoupdate run --token "$CLOUDFLARE_TUNNEL_TOKEN"
+    command: ["tunnel","--no-autoupdate","run"]
