--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -14,5 +14,6 @@ services:
     image: cloudflare/cloudflared:latest
     restart: unless-stopped
     env_file:
-      - /srv/website/.env.prod                # lives only on the droplet
+      - /srv/website/.env.prod
+    # remove entrypoint
     command: ["tunnel","--no-autoupdate","run"]
