--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,5 +15,6 @@ services:
     restart: unless-stopped
     env_file:
       - /srv/website/.env.prod
-    command: ["tunnel","--no-autoupdate","run","--token","${TUNNEL_TOKEN}"]
+    command: ["tunnel","--no-autoupdate","run"]
+
 
